# Ling-innerflow

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.nginx  README.md  docker-compose.yml  nginx.conf  nginx.ecs.conf  pom.xml  prometheus.yml
docs/: ARCHITECTURE_REVIEW.md  HANDOFF_pattern_engine.md  STATE.md  observability-plan.md  read-write-separation-design.md
emotion-service/: app.py
v2/: CASE_STUDY.md  README.md  pyproject.toml
v2/docs/adr/: 0001-kernel-not-framework.md  0002-memory-eval-pr1.md
v2/docs/notes/: memory-prior-art.md
v2/eval/: README.md  RESULTS_MEMORY.md  RESULTS_MEMORY_LLM.md  RESULTS_MEMORY_PR2C.md
v2/eval/fixtures/: memory_conflict_cases.jsonl  memory_eval_challenge.jsonl  memory_eval_dev.jsonl  memory_eval_locked.jsonl  safety_red_team_cases.jsonl
v2/scripts/: run_llm_eval.py  run_pr2c_eval.py
v2/src/innerflow_v2/: __init__.py
v2/src/innerflow_v2/eval/: __init__.py  fixtures.py  memory_eval.py  metrics.py  run_memory_eval.py
v2/src/innerflow_v2/memory/: __init__.py  kernel.py  llm.py  models.py  semantic_keys.py  systems.py  systems_llm.py  types.py
v2/src/innerflow_v2/safety/: __init__.py  guard.py  models.py
v2/src/innerflow_v2/trace/: __init__.py  models.py  recorder.py
v2/tests/: test_challenge_split.py  test_kernel_llm.py  test_llm_reasoner_hardening.py  test_memory_eval_alignment.py  test_memory_eval_fixtures.py  test_memory_fixture_schema.py  test_memory_metrics.py  test_memory_precision_guards.py  test_memory_systems.py  test_report_no_drift.py  test_safety_guard_invariant.py  test_trace_schema.py
(+382 files in other folders)
